--- a/common/src/MakefileCommon
+++ b/common/src/MakefileCommon
@@ -10,6 +10,13 @@ ifeq ($(DEFAULT_SPRITES_SIZE), )
 	DEFAULT_SPRITES_SIZE = SPRITES_8x16
 endif
 
+#--- Figure out Tiled directory
+ifneq ($(wildcard /C/Program\ Files/Tiled/Tiled.exe),)
+	TILED = /C/Program\ Files/Tiled/Tiled.exe
+else
+	TILED = tiled
+endif
+
 ifeq ($(MUSIC_PLAYER), )
 	MUSIC_PLAYER = HUGETRACKER
 endif
@@ -27,9 +34,6 @@ IHXCHECK = ihxcheck
 PNG2ASSET = png2asset
 BANKPACK = bankpack
 
-GBR2C = $(ZGB_PATH_UNIX)/../tools/gbr2c/gbr2c
-GBR2PNG = $(ZGB_PATH_UNIX)/../tools/gbr2png/gbr2png
-GBM2C = $(ZGB_PATH_UNIX)/../tools/gbm2c/gbm2c
 MOD2GBT = $(ZGB_PATH_UNIX)/../env/mod2gbt
 UGE2SOURCE = $(ZGB_PATH_UNIX)/../env/uge2source
 BGB = $(ZGB_PATH_UNIX)/../env/bgb/bgb
@@ -39,7 +43,7 @@ SRC2SYM = $(ZGB_PATH_UNIX)/../env/src2sym.pl
 CFLAGS += -Wa-n -msm83 --no-std-crt0 --fsigned-char --use-stdout -Dnonbanked= -I$(GBDK_HOME)/include -D__PORT_sm83 -D__TARGET_gb -I$(GBDK_HOME)/include/asm $(BUILD_DEFS) -I../include -I$(ZGB_PATH_UNIX)/include
 CFLAGS += -DFILE_NAME=$(basename $(<F)) -MMD
 
-#since I am placing my OAM mirror at the end of the ram (0xDF00-0xDFFF) I need to move the stack to 0xDEFF
+# Since I am placing my OAM mirror at the end of the ram (0xDF00-0xDFFF) I need to move the stack to 0xDEFF
 LNAMES=-g _shadow_OAM=0xC000 -g .STACK=0xDEFF -g .refresh_OAM=0xFF80 -b _DATA=0xc0a0 -b _CODE=0x0200
 LFLAGS=-n -m -j -w -i -k $(GBDK_HOME)/lib/sm83/ -l sm83.lib -k $(GBDK_HOME)/lib/gb/ -l gb.lib -k $(OBJDIR_ZGB)/ -l zgb.lib $(LNAMES)
 
@@ -95,31 +99,33 @@ else
 	CFLAGS += -DNDEBUG
 endif
 
+# Determine music directories
+ifeq ($(MUSIC_PLAYER), GBT_PLAYER)
+	MUSICS_MOD = $(foreach dir,../res/music,$(notdir $(wildcard $(dir)/*.mod)))
+else
+	MUSICS_UGE = $(foreach dir,../res/music,$(notdir $(wildcard $(dir)/*.uge)))
+endif
+
 current_dir = $(shell pwd)
 
 ASMS_ZGB    = $(foreach dir,$(ZGB_PATH_UNIX)/src,$(notdir $(wildcard $(dir)/*.s)))
 CLASSES_ZGB = $(foreach dir,$(ZGB_PATH_UNIX)/src,$(notdir $(wildcard $(dir)/*.c)))
 ASMS        = $(foreach dir,.,$(notdir $(wildcard $(dir)/*.s))) 
 CLASSES     = $(foreach dir,.,$(notdir $(wildcard $(dir)/*.c))) 
-GBRS        = $(foreach dir,../res,$(notdir $(wildcard $(dir)/*.gbr)))
-GBMS        = $(foreach dir,../res,$(notdir $(wildcard $(dir)/*.gbm)))
+TSXS        = $(foreach dir,../res/tilesets,$(notdir $(wildcard $(dir)/*.tsx)))
+TMXS        = $(foreach dir,../res/rooms,$(notdir $(wildcard $(dir)/*.tmx)))
 PNGS        = $(foreach dir,../res,$(notdir $(wildcard $(dir)/*.png)))
-SPRITES     = $(foreach dir,../res/sprites,$(notdir $(wildcard $(dir)/*.gbr)))
 SPRITES_PNG = $(foreach dir,../res/sprites,$(notdir $(wildcard $(dir)/*.png)))
 SGB_BORDERS = $(foreach dir,../res/borders,$(notdir $(wildcard $(dir)/*.png)))
-ifeq ($(MUSIC_PLAYER), GBT_PLAYER)
-	MUSICS_MOD = $(foreach dir,../res/music,$(notdir $(wildcard $(dir)/*.mod)))
-else
-	MUSICS_UGE = $(foreach dir,../res/music,$(notdir $(wildcard $(dir)/*.uge)))
-endif
-OBJS = $(GBMS:%.gbm=$(OBJDIR_RES)/%.gbm.o) $(GBRS:%.gbr=$(OBJDIR_RES)/%.gbr.o) $(SPRITES:%.gbr=$(OBJDIR_RES)/sprites/%.gbr.o) $(SPRITES_PNG:%.png=$(OBJDIR_RES)/sprites/%.png.o) $(SGB_BORDERS:%.png=$(OBJDIR_RES)/borders/%.png.o) $(PNGS:%.png=$(OBJDIR_RES)/%.png.o) $(MUSICS_MOD:%.mod=$(OBJDIR_RES)/%.mod.o) $(MUSICS_UGE:%.uge=$(OBJDIR_RES)/%.uge.o) $(ASMS:%.s=$(OBJDIR)/%.o) $(CLASSES:%.c=$(OBJDIR)/%.o)
+
+OBJS = $(TMXS:%.tmx=$(OBJDIR_RES)/%.tmx.o) $(TSXS:%.tsx=$(OBJDIR_RES)/%.tsx.o) $(SPRITES_PNG:%.png=$(OBJDIR_RES)/sprites/%.png.o) $(SGB_BORDERS:%.png=$(OBJDIR_RES)/borders/%.png.o) $(PNGS:%.png=$(OBJDIR_RES)/%.png.o) $(MUSICS_MOD:%.mod=$(OBJDIR_RES)/%.mod.o) $(MUSICS_UGE:%.uge=$(OBJDIR_RES)/%.uge.o) $(ASMS:%.s=$(OBJDIR)/%.o) $(CLASSES:%.c=$(OBJDIR)/%.o)
 OBJS_ZGB = $(ASMS_ZGB:%.s=$(OBJDIR_ZGB)/%.o) $(CLASSES_ZGB:%.c=$(OBJDIR_ZGB)/%.o) $(OBJ_DIR_ZGB)
 OBJS_ZGB_LIB = $(subst $(subst ,, ),\n,$(ASMS_ZGB:%.s=%.o) $(CLASSES_ZGB:%.c=%.o))
 
 RELS = $(OBJS:%.o=%.rel)
 
-#prevent gbr2c and gbm2c intermediate files from being deleted
-.SECONDARY: $(GBMS:%.gbm=$(OBJDIR_RES)/%.gbm.c) $(GBRS:%.gbr=$(OBJDIR_RES)/%.gbr.c) $(SPRITES:%.gbr=$(OBJDIR_RES)/sprites/%.gbr.c) $(SPRITES_PNG:%.png=$(OBJDIR_RES)/sprites/%.png.c) $(SGB_BORDERS:%.png=$(OBJDIR_RES)/borders/%.png.c) $(PNGS:%.png=$(OBJDIR_RES)/%.png.c) $(MUSICS_MOD:%.mod=$(OBJDIR_RES)/%.mod.c) $(MUSICS_UGE:%.uge=$(OBJDIR_RES)/%.uge.c)
+# Prevent Tiled intermediate files from being deleted
+.SECONDARY: $(TMXS:%.tmx=$(OBJDIR_RES)/%.tmx.c) $(TSXS:%.tsx=$(OBJDIR_RES)/%.tsx.c) $(SPRITES_PNG:%.png=$(OBJDIR_RES)/sprites/%.png.c) $(SGB_BORDERS:%.png=$(OBJDIR_RES)/borders/%.png.c) $(PNGS:%.png=$(OBJDIR_RES)/%.png.c) $(MUSICS_MOD:%.mod=$(OBJDIR_RES)/%.mod.c) $(MUSICS_UGE:%.uge=$(OBJDIR_RES)/%.uge.c)
 
 #dependencies -------------------------------------------------------------------------------------------
 # option -MMD will generate .d files that can be included here for dependency checking (we can skip this on clean)
@@ -153,23 +159,18 @@ $(OBJDIR_RES)/borders:
 #resources---------------------------------------------
 #a few notes of this rule (for future me)
 #- SECONDEXPANSION is required to create an optional prerrequisite (meta doesn't exist the first time the sprite is created)
-#- I have grouped GBR2PNG and PNG2MTSR in the same rule because the others rule had preference otherwise
+#- I have grouped PNG2MTSR in the same rule because the others rule had preference otherwise
 #- $(@D) is the directory part of the target (http://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html#Automatic-Variables)
 #- $(<F) is the filename without dir of the first prerrequisite
-.SECONDEXPANSION:
-$(OBJDIR_RES)/sprites/%.gbr.c: ../res/sprites/%.gbr $$(wildcard ../res/sprites/%.gbr.meta)
-	@$(GBR2PNG) $< $(OBJDIR_RES)/sprites
-	@$(PNG2ASSET) $(@D)/$(<F).png $(CFLAGSPNG2ASSET) `cat <$(@D)/$(<F).png.meta` -keep_palette_order -use_structs -c $@
-
 .SECONDEXPANSION:
 $(OBJDIR_RES)/sprites/%.png.c: ../res/sprites/%.png $$(wildcard ../res/sprites/%.png.meta)
 	@$(PNG2ASSET) $< $(CFLAGSPNG2ASSET) `cat <$<.meta` -b 255 -use_structs -c $@
 
-$(OBJDIR_RES)/%.gbm.c: ../res/%.gbm
-	@$(GBM2C) $< $(OBJDIR_RES)
+$(OBJDIR_RES)/%.tmx.c: ../res/rooms/%.tmx
+	@$(TILED) --export-map gbdk "$(abspath $<)" "$(abspath $@)"
 
-$(OBJDIR_RES)/%.gbr.c: ../res/%.gbr
-	@$(GBR2C) $< $(OBJDIR_RES)
+$(OBJDIR_RES)/%.tsx.c: ../res/tilesets/%.tsx
+	@$(TILED) --export-tileset gbdk "$(abspath $<)" "$(abspath $@)"
 
 $(OBJDIR_RES)/borders/%.png.c: ../res/borders/%.png $(OBJDIR_RES)/borders
 	@$(PNG2ASSET) $< -b 255 -map -bpp 4 -max_palettes 4 -use_map_attributes -use_structs -pack_mode sgb -c $@
